# multivew-head-pose-estimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hpe_multiview.cpp  hpe_oneshot.cpp
data/: example_landmark_68.anl
include/: data_manager.h  db_params.h  file_utils.h  hpe_problem.h  mesh.h  model.h  texture.h
include/functor/: expr_coef_reproj_err.h  ext_params_reproj_err.h  functor.h  point_reproj_err.h  reg_term.h  shape_coef_reproj_err.h
include/utils/: 2d_render_utils.h
lib/BFM-tools/include/: bfm_manager.h  constant.h  data.hpp  transform.hpp
lib/BFM-tools/src/: bfm_manager.cpp
lib/glad/: glad.c
lib/tiny_progress/: tiny_progress.hpp
src/: hpe_problem.cpp
